--- a/demo-site/styles/bui-styles.css
+++ b/demo-site/styles/bui-styles.css
@@ -567,7 +567,7 @@ fieldset[disabled] .bui-buttons .btn {
 .bui-buttons .btn:before,
 .bui-buttons .btn span:before,
 .bui-buttons .btn i:before {
-  margin-left: -0.25em;
+  margin-left: 1px;
   margin-right: 0.35em;
 }
 .bui-buttons .btn-default {
@@ -675,12 +675,6 @@ fieldset[disabled] .bui-buttons .btn {
 .bui-buttons .btn-text.active {
   color: #007ea1;
 }
-.bui-buttons .btn-text:before,
-.bui-buttons .btn-text span:before,
-.bui-buttons .btn-text i:before {
-  margin-left: 0;
-  margin-right: 0.35em;
-}
 .bui-buttons .btn-text.disabled,
 .bui-buttons .btn-text[disabled],
 fieldset[disabled] .bui-buttons .btn-text {
@@ -764,7 +758,7 @@ fieldset[disabled] .bui-buttons .btn-text-toggle {
 .bui-buttons .btn-icon:before,
 .bui-buttons .btn-icon i:before,
 .bui-buttons .btn-icon span:before {
-  margin: 0;
+  margin: 1px 0;
   line-height: 1em;
 }
 .bui-buttons .btn-icon:hover,
@@ -858,7 +852,7 @@ fieldset[disabled] .bui-buttons .btn-cancel:active {
 .bui-buttons .btn-remove:before,
 .bui-buttons .btn-remove i:before,
 .bui-buttons .btn-remove span:before {
-  margin: 0;
+  margin: 1px 0;
   line-height: 1em;
 }
 .bui-buttons .btn-remove:hover,
@@ -943,7 +937,7 @@ fieldset[disabled] .bui-buttons .btn-link {
 }
 .bui-buttons .tag.icon-user-group:before {
   margin-right: 0.4em;
-  margin-left: 0;
+  margin-left: 1px;
 }
 .bui-buttons .btn-xs {
   font-size: 0.714em;
@@ -971,6 +965,7 @@ fieldset[disabled] .bui-buttons .btn-link {
 }
 .bui-buttons .btn-lg.btn-icon,
 .bui-buttons .btn-lg.btn-remove {
+  font-size: 1.618em;
   padding: 4px 0;
 }
 .bui-inputs label {
@@ -1368,6 +1363,81 @@ fieldset[disabled] .bui-modals .modal-header .close:active {
 }
 .bui-modals .modal-scroll-body .modal-dialog .modal-footer {
   border-top: 1px solid #dddddd;
+}
+.bui-modals .fly-out-menu {
+  position: fixed;
+  z-index: 9000;
+  left: -252px;
+  top: 0;
+  bottom: 0;
+  width: 250px;
+  background-color: rgba(255, 255, 255, 0.93);
+  border-right: 1px solid #dddddd;
+  box-shadow: 2px 0 4px 0 rgba(221, 221, 221, 0.5);
+  transition: left 200ms cubic-bezier(0.67, 0.01, 0, 1);
+}
+.bui-modals .fly-out-menu.fly-out-opened {
+  left: 0;
+}
+.bui-modals .fly-out-menu .fly-out-header {
+  padding: 1em;
+}
+.bui-modals .fly-out-menu .fly-out-header h4 {
+  display: inline-block;
+  line-height: 1.1em;
+}
+.bui-modals .fly-out-menu .fly-out-header .close {
+  color: #777777;
+  opacity: 1;
+  filter: alpha(opacity=100);
+  line-height: 0.8em;
+  margin-top: 0.45em;
+}
+.bui-modals .fly-out-menu .fly-out-header .close:before {
+  font-family: "beacon-icons";
+  font-size: 0.8em;
+  content: '\e802';
+}
+.bui-modals .fly-out-menu .fly-out-header .close:hover,
+.bui-modals .fly-out-menu .fly-out-header .close:focus {
+  cursor: pointer;
+  color: #9e0b0f;
+  text-decoration: none;
+}
+.bui-modals .fly-out-menu .fly-out-header .close:active {
+  color: #86090d;
+}
+.bui-modals .fly-out-menu .fly-out-header .close.disabled,
+.bui-modals .fly-out-menu .fly-out-header .close[disabled],
+fieldset[disabled] .bui-modals .fly-out-menu .fly-out-header .close {
+  color: #bbbbbb;
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+.bui-modals .fly-out-menu .fly-out-header .close.disabled:hover,
+.bui-modals .fly-out-menu .fly-out-header .close[disabled]:hover,
+fieldset[disabled] .bui-modals .fly-out-menu .fly-out-header .close:hover,
+.bui-modals .fly-out-menu .fly-out-header .close.disabled:focus,
+.bui-modals .fly-out-menu .fly-out-header .close[disabled]:focus,
+fieldset[disabled] .bui-modals .fly-out-menu .fly-out-header .close:focus,
+.bui-modals .fly-out-menu .fly-out-header .close.disabled:active,
+.bui-modals .fly-out-menu .fly-out-header .close[disabled]:active,
+fieldset[disabled] .bui-modals .fly-out-menu .fly-out-header .close:active {
+  text-decoration: none;
+  color: #bbbbbb;
+}
+.bui-modals .fly-out-menu .fly-out-body {
+  max-height: 80%;
+  max-height: calc(100vh - 9.2rem);
+  overflow-y: auto;
+}
+.bui-modals .fly-out-menu .fly-out-footer {
+  padding: 1em;
+  text-align: right;
+  position: absolute;
+  width: 249px;
+  bottom: 0;
+  left: 0;
 }
 .bui-grid .container {
   margin-right: auto;
